...
          children: [
            Padding(
              padding: const EdgeInsets.fromLTRB(40, 77, 90, 18),
              child: Column(
                children: [
                  Text(
                    'Discover all about sport',
                    style: TextStyle(
                      fontFamily: AppFonts().primaryFont,
                      fontSize: 40,
                      fontWeight: FontWeight.w600,
                      color: Colors.white,
                    ),
...
                                    mainAxisAlignment: MainAxisAlignment.start,
                                    children: [
                                      Padding(
                                        padding: const EdgeInsets.fromLTRB(
                                            0, 18, 0, 8),
                                        child: Text(
                                          'Sign in',
                                          style: TextStyle(
                                            color: Colors.white,
                                            fontFamily: AppFonts().primaryFont,
                                            fontWeight: FontWeight.w600,
                                            fontSize: 28,
                                          ),
...
                                      Padding(
                                        padding: const EdgeInsets.fromLTRB(
                                            0, 18, 0, 0),
                                        child: AppTextField(
                                            controller:
                                                controller.emailController,
                                            text: 'Email',
                                            icon: IconlyLight.message,
                                            color: Color(0xFF181829)),
                                      ),
                                      Padding(
                                        padding: const EdgeInsets.fromLTRB(
                                            0, 18, 0, 0),
                                        child: AppTextField(
                                            controller:
                                                controller.passwordController,
                                            text: 'Password',
                                            icon: IconlyLight.password,
                                            color: Color(0xFF181829)),
                                      ),
                                      Padding(
                                        padding: const EdgeInsets.fromLTRB(
                                            0, 18, 18, 18),
                                        child: Align(
                                          alignment: Alignment.centerRight,
                                          child: Text('Forgot Password',
                                              style: TextStyle(
                                                  fontFamily:
                                                      AppFonts().primaryFont,
                                                  color: Colors.white)),
                                        ),
                                      ),
...
                                    mainAxisAlignment: MainAxisAlignment.start,
                                    children: [
                                      Padding(
                                        padding: const EdgeInsets.fromLTRB(
                                            0, 18, 0, 8),
                                        child: Text(
                                          'Sign up',
                                          style: TextStyle(
                                            color: Colors.white,
                                            fontFamily: AppFonts().primaryFont,
                                            fontWeight: FontWeight.w600,
                                            fontSize: 28,
                                          ),
...
                              ),
                            );
                          },
                        );
                      },
                      child: Text(
                        'Sign Up',
                        style: TextStyle(
                          color: Color(0xFFC4C4C4),
                          fontSize: 18,
                          fontFamily: 'Source Sans Pro',
                          fontWeight: FontWeight.w400,
                          height: 0,
...
